force-app/main/default/objects/Stock_Price_Tick__c/Stock_Price_Tick__c.object-meta.xml
<CustomObject
     >
    <description>Captures a reading of the Stock Price.</description>
    <historyRetentionPolicy n1:nil="true" />
    <label>Stock Price Tick</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Stock Price Tick Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Price Ticks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>