force-app/main/default/objects/Stock_Price_Tick__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>