force-app/main/default/objects/Stock_Price_Tick__c/fields/Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference__c</fullName>
    <description>The price difference between this tick and the current price of the Stock when this tick was recorded</description>
    <label>Price Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>