force-app/main/default/objects/Stock_Price_Tick__c/fields/Price_Direction__c.field-meta.xml
<CustomField>
    <fullName>Price_Direction__c</fullName>
    <description>Did the price go UP in this tick? Or DOWN? Or UNCHANGED.</description>
    <label>Price Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>DOWN</fullName>
            </value>
            <value>
                <fullName>UNCHANGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>