force-app/main/default/objects/Stock_Price_Tick__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>The Stock this tick is tied to</description>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Stock Price Ticks</relationshipLabel>
    <relationshipName>Stock_Price_Ticks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>